--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "lucide-react": "^0.562.0",
+    "monaco-editor": "^0.55.1",
     "next": "14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-resizable-panels": "^4.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
